--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: libio-socket-portstate-perl
 Section: perl
 Priority: optional
-Maintainer: Piotr Roszatycki <dexter@debian.org>
+Maintainer: Debian Perl Group <pkg-perl-maintainers@lists.alioth.debian.org>
+Uploaders: Piotr Roszatycki <dexter@debian.org>
 Build-Depends: debhelper (>= 9)
 Build-Depends-Indep: perl
 Standards-Version: 3.9.5
